--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
   "homepage": "https://github.com/northcoders/be-nc-news#readme",
   "devDependencies": {
     "husky": "^7.0.0",
-    "jest": "^27.5.1",
+    "jest": "^29.3.1",
     "jest-extended": "^2.0.0",
+    "jest-sorted": "^1.0.14",
     "pg-format": "^1.0.4",
     "supertest": "^6.3.3"
   },
@@ -35,7 +36,8 @@
   },
   "jest": {
     "setupFilesAfterEnv": [
-      "jest-extended/all"
+      "jest-extended/all",
+      "jest-sorted"
     ]
   }
 }
