--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "seed": "node ./db/seeds/run-seed.js",
     "test": "jest",
     "test-app": "jest __tests__/app.test.js",
-    "test-utils": "jest __tests__/utils-test.js",
+    "test-utils": "jest __tests__/utils.test.js",
     "prepare": "husky install",
     "scrap": "psql -f ./scrap.sql > scrap.txt",
     "start": "node listen.js",
