--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,3 +21,23 @@ jobs:
         run: npm install
       - name: Test utils
         run: npm run test-utils
+
+  test-app:
+    needs: test-utils
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout and clone repo
+        uses: actions/checkout@v3
+
+      - name: Setup PSQL
+        uses: harmon758/postgresql-action@v1
+        with:
+          postgresql db: test_db
+          postgresql user: super_user
+          postgresql password: super_password
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Test app
+        run: PGDATABASE=test_db PGUSER=super_user PGPASSWORD=super_password npm run test-app
