--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,3 +41,17 @@ jobs:
 
       - name: Test app
         run: PGDATABASE=test_db PGUSER=super_user PGPASSWORD=super_password npm run test-app
+
+  test-app-live-db:
+    needs: test-app
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout and clone repo
+        uses: actions/checkout@v3
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Test app with live data
+        run: NODE_ENV=production DATABASE_URL=${{ secrets.DATABASE_URL }} npm run test-app
+
