--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,4 +56,4 @@ jobs:
         run: NODE_ENV=production DATABASE_URL=${{ secrets.DATABASE_URL }} npm run test-app
 
       - name: Seed db with prod data
-        run: DATABASE_URL=${{ secrets.DATABASE_URL }} npm run seed:prod
+        run: DATABASE_URL=${{ secrets.DATABASE_URL }} npm run seed-prod
